--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "redux-devtools": "2.1.5",
     "rimraf": "2.4.3",
     "style-loader": "0.12.4",
+    "three.js": "r73", 
     "url-loader": "0.5.6",
     "webpack": "1.12.2",
     "webpack-dev-server": "1.12.0"
