--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react": "3.5.1",
     "extract-text-webpack-plugin": "0.8.2",
     "file-loader": "0.8.4",
+    "immutalbe": "3.7.5",
     "json-loader": "0.5.3",
     "karma": "0.13.11",
     "karma-firefox-launcher": "0.1.6",
