--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-runtime": "5.8.25",
     "bluebird": "2.10.2",
     "classnames": "2.1.5",
+    "immutable": "3.7.5",    
     "isomorphic-fetch": "2.1.1",
     "lodash": "3.10.1",
     "react": "0.14.0",
@@ -41,7 +42,6 @@
     "eslint-plugin-react": "3.5.1",
     "extract-text-webpack-plugin": "0.8.2",
     "file-loader": "0.8.4",
-    "immutalbe": "3.7.5",
     "json-loader": "0.5.3",
     "karma": "0.13.11",
     "karma-firefox-launcher": "0.1.6",
