--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "babel-runtime": "5.8.25",
     "bluebird": "2.10.2",
     "classnames": "2.1.5",
-    "immutable": "3.7.5",    
+    "immutable": "3.7.5",
     "isomorphic-fetch": "2.1.1",
     "lodash": "3.10.1",
     "react": "0.14.0",
@@ -26,7 +26,8 @@
     "react-dom": "0.14.0",
     "react-redux": "4.0.0",
     "react-router": "1.0.0-rc3",
-    "redux": "3.0.2"
+    "redux": "3.0.2",
+    "redux-promise": "0.5.0"
   },
   "devDependencies": {
     "autoprefixer": "6.0.3",
@@ -57,7 +58,7 @@
     "redux-devtools": "2.1.5",
     "rimraf": "2.4.3",
     "style-loader": "0.12.4",
-    "treo": "0.5.1", 
+    "treo": "0.5.1",
     "url-loader": "0.5.6",
     "webpack": "1.12.2",
     "webpack-dev-server": "1.12.0"
