Various changes to try to get the 2D floor map to render.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "0.14.0",
     "react-dnd": "2.0.0",
     "react-dom": "0.14.0",
+    "react-imageloader": "2.0.0",
     "react-redux": "4.0.0",
     "react-router": "1.0.0-rc3",
     "redux": "3.0.2",
