--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-runtime": "5.8.25",
     "bluebird": "2.10.2",
     "classnames": "2.1.5",
+    "history": "1.13.1",
     "immutable": "3.7.5",
     "isomorphic-fetch": "2.1.1",
     "lodash": "3.10.1",
@@ -29,7 +30,7 @@
     "react-dom": "0.14.0",
     "react-imageloader": "2.0.0",
     "react-redux": "4.0.0",
-    "react-router": "1.0.0-rc3",
+    "react-router": "1.0.1",
     "redux": "3.0.2",
     "redux-promise": "0.5.0"
   },
